[package]
name = "neuroquantum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core neuromorphic database engine with DNA compression"
keywords = ["database", "neuromorphic", "dna-compression", "bioinformatics", "simd"]

[package.metadata.cargo-machete]
# These dependencies are used conditionally or reserved for future features
ignored = ["bitvec", "bytemuck", "hashbrown", "wide", "chacha20poly1305"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

# DNA compression specific dependencies
# Replaced reed-solomon-erasure with reed-solomon-simd to resolve RUSTSEC-2024-0384
# reed-solomon-simd is actively maintained and provides better SIMD performance
reed-solomon-simd = "3.1"
rayon = "1.11.0"
bitvec = "1.0"
hashbrown = "0.16.1"
crc32fast = "1.5"

# Missing dependencies for existing modules
rand.workspace = true
rand_distr = "0.4"
base64 = "0.22"

# Quantum computing - complex numbers for state vectors
num-complex = "0.4.6"
nalgebra = { version = "0.34", features = ["serde-serialize"] }

# SIMD and performance
wide = "0.7"
criterion = { version = "0.8", features = ["html_reports"], optional = true }

# Async traits
async-trait = "0.1.89"
futures = "0.3"

# AWS SDK for S3 backups
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"

# Compression algorithms for comparison
flate2 = "1.1"
lz4_flex = "0.12"

# B+ Tree serialization
bincode = "1.3"

# LRU cache for page storage
lru = "0.16.2"

# Prometheus metrics
prometheus = { version = "0.14.0", features = ["process"] }
axum = "0.8.8"

# Post-quantum cryptography and security
# ML-KEM (Kyber): Using RustCrypto implementation for proper serialization support
ml-kem = "0.2.1"
# ML-DSA (Dilithium): Using pqcrypto for digital signatures
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3.5"
sha3 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# Signal processing for EEG biometric authentication
rustfft = "6.4"

# System information for auto-tuning
sysinfo = "0.37.2"

# OS Keychain integration for secure key storage
# macOS: Keychain, Windows: Credential Manager, Linux: Secret Service/KWallet
keyring = "3.6.3"

[dev-dependencies]
proptest = "1.9"
rand.workspace = true
tempfile = "3.23"
tokio-test = "0.4"

[features]
default = ["simd"]
simd = []
benchmarks = ["criterion"]
neon-optimizations = []

[[bench]]
name = "dna_compression"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "grover_search"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "neon_optimization"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "btree_benchmark"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "page_storage_benchmark"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "quantum_annealing"
harness = false
required-features = ["benchmarks"]

