[package]
name = "neuroquantum-qsql"
version = "0.1.0"
edition = "2021"
description = "QSQL language implementation for NeuroQuantumDB with neuromorphic and quantum extensions"
license = "MIT"

[dependencies]
# Core neuroquantum crate
neuroquantum-core = { path = "../neuroquantum-core" }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Serialization
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"

# Parsing
regex = "1.11.2"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# Logging
tracing = "0.1.41"

# Date and time for Row timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.7.0"
tempfile = "3.8"

[features]
default = ["neuromorphic", "quantum", "natural-language"]
neuromorphic = []
quantum = []
natural-language = []

