[package]
name = "neuroquantum-qsql"
version = "0.1.0"
edition = "2021"
description = "QSQL language implementation for NeuroQuantumDB with neuromorphic and quantum extensions"
license = "MIT"

[dependencies]
# Core neuroquantum crate
neuroquantum-core = { path = "../neuroquantum-core" }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# YAML parsing - using serde_yaml_ng as maintained fork of deprecated serde_yaml
serde_yaml_ng = "0.10"

# Parsing
regex = "1.12"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1.43"

# Date and time for Row timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.9"
tempfile = "3.23"

[features]
default = ["neuromorphic", "quantum", "natural-language"]
neuromorphic = []
quantum = []
natural-language = []

