[package]
name = "neuroquantum-qsql"
version = "0.0.0" # x-release-please-version
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "QSQL query language implementation for NeuroQuantumDB with neuromorphic and quantum extensions"
keywords = ["sql", "query-language", "database", "neuromorphic", "quantum"]
categories = ["database", "parser-implementations"]

[dependencies]
# Core neuroquantum crate
neuroquantum-core = { path = "../neuroquantum-core" }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"

# YAML parsing - using serde_yaml_ng as maintained fork of deprecated serde_yaml
serde_yaml_ng = "0.10"

# Parsing
regex = "1.12"

# Error handling
anyhow = "1.0.101"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"

# Date and time for Row timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.10"
tempfile = "3.25"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[example]]
name = "transaction_control"
path = "examples/transaction_control.rs"

[[example]]
name = "hash_join_performance"
path = "examples/hash_join_performance.rs"

[[bench]]
name = "qsql_functions"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "hash_join_performance"
harness = false
required-features = ["benchmarks"]

[features]
default = ["neuromorphic", "quantum", "natural-language"]
neuromorphic = []
quantum = []
natural-language = []
benchmarks = []