[package]
name = "neuroquantum-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for NeuroQuantumDB - run neuromorphic database in the browser"
license = "MIT"
repository = "https://github.com/neuroquantumdb/neuroquantumdb"
keywords = ["wasm", "webassembly", "database", "neuromorphic", "quantum"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging for browser console
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in release builds
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization at cost of compile time
panic = "abort"     # Remove unwinding code for smaller binary
strip = true        # Strip debug symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
