[package]
name = "neuroquantum-wasm"
version = "0.2.0" # x-release-please-version
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for NeuroQuantumDB - run neuromorphic database in the browser"
keywords = ["wasm", "webassembly", "database", "neuromorphic", "quantum"]
categories = ["wasm", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging for browser console
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# NOTE: Release profile is defined in workspace root Cargo.toml
# WASM-specific optimizations are applied via wasm-pack profile

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["anyhow", "thiserror", "wasm-bindgen-futures", "web-sys"]
